Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9221

Just one (static) waveInCriticalSection but multiple QAudioInput to record from different soundcards

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.3
    • 4.6.2
    • Multimedia
    • None

    Description

      I have an application which must be able to record from different sound cards.
      Here it comes to a problem with the waveInCriticalSection in QAudioInputPrivate.
      For now my application keeps crashing on exit cause one instance will free the critical section and later the other instance tries to

      EnterCriticalSection(&waveInCriticalSection);

      cause there are still data arriving for the other sound cards.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            korbatit Kurt Korbatits (closed Nokia identity) (Inactive)
            michaels Michael Sprauer
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes