Just one (static) waveInCriticalSection but multiple QAudioInput to record from different soundcards

Task-number:QTBUG-9221
Reviewed-by:Andrew den Exter