src/multimedia/audio/qaudiooutput_win32_p.h
@@ -119,6 +119,8 @@ private:
     static void CALLBACK waveOutProc( HWAVEOUT hWaveOut, UINT uMsg,
             DWORD dwInstance, DWORD dwParam1, DWORD dwParam2 );
 
+    CRITICAL_SECTION waveOutCriticalSection;
+
     WAVEHDR* allocateBlocks(int size, int count);
     void freeBlocks(WAVEHDR* blockArray);
     bool open();
